<resources>
    <string name="app_name" translatable="false">FoodAppBinarChallenge</string>

    <string name="text_order_confirmation">Order Confirmation</string>
    <string name="text_shipping_method">Shipping Method</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_pick_up">Pick Up</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash">Cash</string>
    <string name="text_e_wallet">E-Wallet</string>
    <string name="text_payment_summary">Payment Summary</string>
    <string name="text_total_payment">Total Payment</string>
    <string name="text_order">Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="text_location">Location</string>
    <string name="text_address" translatable="false">Jl. BSD Green Office Park Jl. BSD Grand\nBoulevard, Sampora, BSD, Kabupaten Tangerang, Banten 15345</string>
    <string name="text_0" translatable="false">0</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_add_to_cart">Add to Cart -</string>

    <string name="text_cart">Cart</string>
    <string name="text_notes">Notes</string>

    <string name="text_profile">Profile</string>
    <string name="text_password" translatable="false">Password</string>
    <string name="text_email" translatable="false">Email</string>
    <string name="text_ikapurwanti144_gmail_com" translatable="false">ikapurwanti144@gmail.com</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_089503250312" translatable="false">089503250312</string>
    <string name="text_name">Name</string>
    <string name="text_personal_info">Personal Info</string>
    <string name="text_contact_info">Contact Info</string>
    <string name="text_password_data" translatable="false">********</string>

    <string name="text_header_hello">Hi</string>
    <string name="text_header_greeting">It\'s lunch time</string>
    <string name="text_banner_desc">Get Special Discount</string>
    <string name="text_banner_discount">up to 50%</string>
    <string name="text_claim_voucher">Claim Voucher</string>
    <string name="text_categories">Categories</string>
    <string name="text_food_menu_list">Food Menu List</string>
    <string name="text_title_bottom_nav_home" translatable="false">Home</string>
    <string name="text_title_bottom_nav_cart">Cart</string>
    <string name="text_title_bottom_nav_profile">Profile</string>
    <string name="text_back_to_home">Back to Home</string>
    <string name="text_order_successful">order successful</string>

    <string name="total_qty" translatable="false">x%s</string>
    <string name="text_menu_list_empty">Menu List Data is Empty</string>
    <string name="text_cart_list_empty">Cart List Data is Empty</string>

    <string name="text_start_your_day_with_a_great_taste" translatable="false">Start Your Day with a Great Taste</string>

    <string name="text_register">Register</string>
    <string name="text_already_have_an_account">Already have an Account ?</string>

    <string name="text_login">Login</string>
    <string name="text_not_registered_yet">Not Registered yet ?</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_binar_resto" translatable="false">Binar Resto</string>
    <string name="text_error_name_cannot_empy">Name cannot be empty</string>
    <string name="text_error_email_cannot_empy">Email cannot be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_cannot_empy">Password cannot be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_error_password_does_not_match">Password doesn\'t match</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="text_edit_profile">Edit Profile</string>

    <string name="text_menu_not_found">Menu not found</string>
    <string name="text_category_not_found">Categories not found</string>

    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>

    <string name="text_format_currency">IDR</string>
    <string name="All">All</string>
    <string name="text_checkout_error" translatable="false">Checkout Error</string>
    <string name="text_add_cart_success">Add to cart success !</string>
    <string name="text_profile_update_success">Profile updated successfully</string>
    <string name="text_okay" translatable="false">Okay</string>
    <string name="text_change_pass_email">Change password request sent to your email</string>
    <string name="text_change_profile_failed">Change Profile Failed</string>
    <string name="text_login_failed">Login Failed</string>
    <string name="text_logout_dialog">Do you want to logout ?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_register_failed">Register Failed</string>

</resources>