<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.feature.register.RegisterActivity">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="42dp"
        android:src="@drawable/img_binar_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inria_serif_bold"
        android:text="@string/text_binar_resto"
        android:textColor="@color/app_color_primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_app_logo" />

    <include
        android:id="@+id/layout_user_form"
        layout="@layout/layout_user_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_app"
        app:layout_constraintVertical_bias="0.2" />

    <FrameLayout
        android:id="@+id/fl_btn_loading_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/layout_user_form">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_primary_container_transparent"
            android:fontFamily="@font/inter_font"
            android:text="@string/text_register"
            android:textFontWeight="700"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_user_form" />


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/fl_btn_loading_state">

        <TextView
            android:id="@+id/tv_nav_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_already_have_an_account"
            android:layout_marginEnd="4dp"/>


        <TextView
            android:id="@+id/tv_login_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_highlight_login_here"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>